--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 
         <style>
+            
         .mode {
             float:right;
         }
@@ -194,7 +195,7 @@
                     <p></p>
                     <ul>
                         <li>Played a pivotal role in the federally sponsored American Rescue Plan (ARPA) program, overseeing comprehensive data collection efforts </li>
-                        <li>Developed an extensive data visualization dashboard on R Shiny for country related metrics</li>
+                        <li>Developed an extensive data visualization dashboard on R Shiny for county related metrics</li>
                         <li>Developed a web-based platform used to generate PDFs and email recipient/s based on an employee's credentials through R Shiny</li>
                         <li>Made the best coffee <i class="fas fa-coffee"></i> and got the best donuts <i class="fa-solid fa-utensils"></i></li>
                     </ul>
